--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kinguard-powerupdown (1.1) vili; urgency=medium
+
+  * Updated to use notifcation system for LED control 
+
+ -- PA Nilsson <pa@openproducts.se>  Thu, 20 Jul 2017 09:54:23 +0200
+
 kinguard-powerupdown (1.0) vili; urgency=medium
 
   * Inital release 
