* Updated LSB deps * Added dep on insserv

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kinguard-powerupdown (1.2) vili; urgency=medium
+
+  * Updated LSB deps
+  * Added dep on insserv 
+
+ -- PA Nilsson <pa@openproducts.se>  Thu, 20 Jul 2017 12:36:53 +0200
+
 kinguard-powerupdown (1.1) vili; urgency=medium
 
   * Updated to use notifcation system for LED control 
