--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kinguard-powerupdown (1.3) vili; urgency=medium
+
+  * Fixed excution orders for reboot/restart 
+
+ -- PA Nilsson <pa@openproducts.se>  Thu, 20 Jul 2017 13:57:52 +0200
+
 kinguard-powerupdown (1.2) vili; urgency=medium
 
   * Updated LSB deps
