--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kinguard-powerupdown (1.4) vili; urgency=medium
+
+  * Updated LSB deps. 
+
+ -- PA Nilsson <pa@openproducts.se>  Fri, 25 Aug 2017 15:18:21 +0200
+
 kinguard-powerupdown (1.3) vili; urgency=medium
 
   * Fixed excution orders for reboot/restart 
