Renamed old files, removed LED control (should be added to opi-c)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,30 +1,13 @@
-kinguard-powerupdown (1.4) vili; urgency=medium
+kinguard-powermanagement (1.1) vili; urgency=medium
 
-  * Updated LSB deps. 
+  * Added "Replaces" directive 
 
- -- PA Nilsson <pa@openproducts.se>  Fri, 25 Aug 2017 15:18:21 +0200
+ -- PA Nilsson <pa@openproducts.se>  Fri, 03 Nov 2017 08:38:34 +0100
 
-kinguard-powerupdown (1.3) vili; urgency=medium
+kinguard-powermanagement (1.0) vili; urgency=medium
 
-  * Fixed excution orders for reboot/restart 
+  * Renamed from kinguard-powerupdown
+  * Removed "lateinit-script"
 
- -- PA Nilsson <pa@openproducts.se>  Thu, 20 Jul 2017 13:57:52 +0200
+ -- PA Nilsson <pa@openproducts.se>  Fri, 2 Nov 2017 08:18:21 +0200
 
-kinguard-powerupdown (1.2) vili; urgency=medium
-
-  * Updated LSB deps
-  * Added dep on insserv 
-
- -- PA Nilsson <pa@openproducts.se>  Thu, 20 Jul 2017 12:36:53 +0200
-
-kinguard-powerupdown (1.1) vili; urgency=medium
-
-  * Updated to use notifcation system for LED control 
-
- -- PA Nilsson <pa@openproducts.se>  Thu, 20 Jul 2017 09:54:23 +0200
-
-kinguard-powerupdown (1.0) vili; urgency=medium
-
-  * Inital release 
-
- -- PA Nilsson <pa@openproducts.se>  Wed, 05 Apr 2017 11:55:09 +0200
