--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kinguard-powermanagement (1.2) vili; urgency=medium
+
+  * Removed reference in postinst to "lateinit" 
+
+ -- PA Nilsson <pa@openproducts.se>  Fri, 03 Nov 2017 08:52:45 +0100
+
 kinguard-powermanagement (1.1) vili; urgency=medium
 
   * Added "Replaces" directive 
