--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kinguard-powermanagement (1.4) vili; urgency=medium
+
+  * Add format to indicate native package
+
+ -- Tor Krill <tor@openproducts.se>  Wed, 12 Jun 2019 16:49:54 +0200
+
 kinguard-powermanagement (1.3) vili; urgency=medium
 
   * Update to not use sysv boot, use kinguard scripts instead
