--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kinguard-powermanagement (1.5) vili; urgency=medium
+
+  * Move keepshutdown script to keep package (hw-specific to keep)
+
+ -- Tor Krill <tor@openproducts.se>  Mon, 08 Jul 2019 10:49:51 +0200
+
 kinguard-powermanagement (1.4) vili; urgency=medium
 
   * Add format to indicate native package
