--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kinguard-powermanagement (1.5.1) vili; urgency=medium
+
+  * Bump version to force rebuild
+
+ -- Tor Krill <tor@openproducts.se>  Mon, 08 Jul 2019 14:07:12 +0200
+
 kinguard-powermanagement (1.5) vili; urgency=medium
 
   * Move keepshutdown script to keep package (hw-specific to keep)
