--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kinguard-powermanagement (1.5.2) vili; urgency=medium
+
+  * Buster update
+
+ -- Tor Krill <tor@openproducts.se>  Fri, 30 Aug 2019 14:23:26 +0200
+
 kinguard-powermanagement (1.5.1) vili; urgency=medium
 
   * Bump version to force rebuild
