--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kinguard-powermanagement (1.5.3) vigrid; urgency=medium
+
+  * Bullseye build
+
+ -- Tor Krill <tor@openproducts.se>  Tue, 01 Feb 2022 08:03:57 +0100
+
 kinguard-powermanagement (1.5.2) vili; urgency=medium
 
   * Buster update
